# concolic-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: ast.h  concolic-bool.h  concolic-int.h  concolic.h  executor.h  util.h
lib/: ast.cc  concolic-bool.cc  concolic-int.cc  executor.cc  util.cc
test/: main.cc
